# GLSPIRVMatrixBugAMD

./: CMakeLists.txt  SPIRVMatrixBug.cpp  Shader.frag  Shader.vert
